--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practica-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/angelicanoriega/React",
+  "homepage": "https://angelicanoriega.github.io/React/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
